# MQP-Dashboard-Frontend

./: .env.dev  .env.production  .env.staging  .env.test  .eslintrc.js  .eslintrc.json  .gitignore  .htaccess  .pdm-python  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkins  Jenkinsfile  README.md  asset-manifest.json  audit-report.json  craco.config.js  deploy_production.sh  deploy_stage.sh  deploy_test.sh  docker-compose.yml  httpd.conf  index.html  jsconfig.json  manifest.json  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/ISSUE_TEMPLATE/: Contact-Dashboard.yml  contact_dashboard.yml  contact_mqp_dashboard_frontend.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: add_to_f4e.yml  ci.yml
.github/workflows /: add-to-f4e.yml
.husky/: commit-msg  pre-commit
config/e2e/: playwright.config.js
config/linting/: .eslintrc.js
config/webpack/: craco.config.js
e2e/: user-flows.spec.js
public/: index.html  manifest.json
scripts/: deploy_production.sh  deploy_stage.sh  deploy_test.sh  precommit-guards.js  security-audit.js  validate-json.js  validate-yaml.js
src/: App.js  App.test.js  api.js  index.js  index.scss  reportWebVitals.js  setupTests.js
src/data/: countries.json  mqp-categories.json  ratings.json  titles.json
src/hooks/: use-http.js  use-input.js  use-outside-click.js
src/store/: accessibilities-slice.js  auth-slice.js  index.js
static/css/: 164.cbec5360.chunk.css  164.cbec5360.chunk.css.map  main.0d3fdd61.css  main.0d3fdd61.css.map  main.175a1801.css  main.175a1801.css.map  (+52 more)
(+310 files in other folders)
